--- a/ver2.0/package.json
+++ b/ver2.0/package.json
@@ -31,6 +31,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "brunch": "^2.10.10",
+    "node-sass": "^4.7.2",
     "vue-brunch": "^2.0.1"
   },
   "license": "ISC"
